Fixed problem with ContextMenu being hidden behind Dialog

--- a/Controls/Dialog/Dialog.css
+++ b/Controls/Dialog/Dialog.css
@@ -13,7 +13,7 @@ div.FitUiControlDialog
 	left: 0px;
 	right: 0px;
 	margin: 0 auto;
-	z-index: 1200;
+	z-index: 1300;
 }
 div.FitUiControlDialog:not(#LegacyIE) /* :not() not supported by IE8 and below */
 {
